Began Record Store SQL Project

--- a/chinook/Complex Queries using Chinook Database.ipynb
+++ b/chinook/Complex Queries using Chinook Database.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        " (18, 'On-The-Go 1', 1, 197.459)]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,19 +256,10 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///chinook.db\n",
-      "Done.\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) no such view: customer_gt_90_dollars\n",
+      "[SQL: DROP VIEW customer_gt_90_dollars;]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -279,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +594,7 @@
        " (58, 'Manoj', 'Pareek', None, '12,Community Centre', 'Delhi', None, 'India', '110017', '+91 0124 39883988', None, 'manoj.pareek@rediff.com', 3)]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +859,7 @@
        " (28, 'Julia', 'Barnett', None, '302 S 700 E', 'Salt Lake City', 'UT', 'USA', '84102', '+1 (801) 531-7272', None, 'jubarnett@gmail.com', 5)]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1001,16 +992,12 @@
        "        <td>index</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>customer_usa</td>\n",
-       "        <td>view</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>customer_gt_90_dollars</td>\n",
        "        <td>view</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>wishlist</td>\n",
-       "        <td>table</td>\n",
+       "        <td>customer_usa</td>\n",
+       "        <td>view</td>\n",
        "    </tr>\n",
        "</table>"
       ],
@@ -1037,12 +1024,11 @@
        " ('ifk_trackalbum_id', 'index'),\n",
        " ('ifk_trackgenre_id', 'index'),\n",
        " ('ifk_trackmedia_type_id', 'index'),\n",
-       " ('customer_usa', 'view'),\n",
        " ('customer_gt_90_dollars', 'view'),\n",
-       " ('wishlist', 'table')]"
+       " ('customer_usa', 'view')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1508,7 @@
        " (58, 'Manoj', 'Pareek', None, '12,Community Centre', 'Delhi', None, 'India', '110017', '+91 0124 39883988', None, 'manoj.pareek@rediff.com', 3)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2020,7 +2006,7 @@
        " (58, 'Manoj', 'Pareek', None, '12,Community Centre', 'Delhi', None, 'India', '110017', '+91 0124 39883988', None, 'manoj.pareek@rediff.com', 3)]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2045,7 +2031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2082,7 +2068,7 @@
        "[('Jane Peacock', 0), ('Margaret Park', 2), ('Steve Johnson', 2)]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2109,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2194,7 @@
        " (22, 'Heather', 'Leacock', None, '120 S Orange Ave', 'Orlando', 'FL', 'USA', '32801', '+1 (407) 999-7788', None, 'hleacock@gmail.com', 4)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2224,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2391,7 @@
        " (8, 'Callahan', 'Laura', 'IT Staff', 6, '1968-01-09 00:00:00', '2017-03-04 00:00:00', '923 7 ST NW', 'Lethbridge', 'AB', 'Canada', 'T1H 1Y8', '+1 (403) 467-3351', '+1 (403) 467-8772', 'laura@chinookcorp.com')]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2417,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2450,7 +2436,7 @@
        "[('Manoj Pareek', 111.86999999999999), ('Puja Srivastava', 71.28)]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,7 +2479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2501,88 +2487,10 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///chinook.db\n",
-      "Done.\n",
-      "Done.\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) no such view: customer_total\n",
+      "[SQL: DROP VIEW customer_total;]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>customer_name</th>\n",
-       "        <th>country</th>\n",
-       "        <th>total_purchases</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Aaron Mitchell</td>\n",
-       "        <td>Canada</td>\n",
-       "        <td>70.28999999999999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Alexandre Rocha</td>\n",
-       "        <td>Brazil</td>\n",
-       "        <td>69.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Astrid Gruber</td>\n",
-       "        <td>Austria</td>\n",
-       "        <td>69.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Bjørn Hansen</td>\n",
-       "        <td>Norway</td>\n",
-       "        <td>72.27000000000001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Camille Bernard</td>\n",
-       "        <td>France</td>\n",
-       "        <td>79.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Daan Peeters</td>\n",
-       "        <td>Belgium</td>\n",
-       "        <td>60.38999999999999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Dan Miller</td>\n",
-       "        <td>USA</td>\n",
-       "        <td>95.03999999999999</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Diego Gutiérrez</td>\n",
-       "        <td>Argentina</td>\n",
-       "        <td>39.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Dominique Lefebvre</td>\n",
-       "        <td>France</td>\n",
-       "        <td>72.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Eduardo Martins</td>\n",
-       "        <td>Brazil</td>\n",
-       "        <td>60.39</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Aaron Mitchell', 'Canada', 70.28999999999999),\n",
-       " ('Alexandre Rocha', 'Brazil', 69.3),\n",
-       " ('Astrid Gruber', 'Austria', 69.3),\n",
-       " ('Bjørn Hansen', 'Norway', 72.27000000000001),\n",
-       " ('Camille Bernard', 'France', 79.2),\n",
-       " ('Daan Peeters', 'Belgium', 60.38999999999999),\n",
-       " ('Dan Miller', 'USA', 95.03999999999999),\n",
-       " ('Diego Gutiérrez', 'Argentina', 39.6),\n",
-       " ('Dominique Lefebvre', 'France', 72.27),\n",
-       " ('Eduardo Martins', 'Brazil', 60.39)]"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2603,7 +2511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2611,170 +2519,14 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///chinook.db\n",
-      "Done.\n"
+      "(sqlite3.OperationalError) no such table: customer_total\n",
+      "[SQL: SELECT customer_name,\n",
+      "       country, \n",
+      "       ROUND(MAX(total_purchases),2) total_purchased\n",
+      "FROM customer_total\n",
+      "GROUP BY country;]\n",
+      "(Background on this error at: http://sqlalche.me/e/e3q8)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>customer_name</th>\n",
-       "        <th>country</th>\n",
-       "        <th>total_purchased</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Diego Gutiérrez</td>\n",
-       "        <td>Argentina</td>\n",
-       "        <td>39.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Mark Taylor</td>\n",
-       "        <td>Australia</td>\n",
-       "        <td>81.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Astrid Gruber</td>\n",
-       "        <td>Austria</td>\n",
-       "        <td>69.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Daan Peeters</td>\n",
-       "        <td>Belgium</td>\n",
-       "        <td>60.39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Luís Gonçalves</td>\n",
-       "        <td>Brazil</td>\n",
-       "        <td>108.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>François Tremblay</td>\n",
-       "        <td>Canada</td>\n",
-       "        <td>99.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Luis Rojas</td>\n",
-       "        <td>Chile</td>\n",
-       "        <td>97.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>František Wichterlová</td>\n",
-       "        <td>Czech Republic</td>\n",
-       "        <td>144.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Kara Nielsen</td>\n",
-       "        <td>Denmark</td>\n",
-       "        <td>37.62</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Terhi Hämäläinen</td>\n",
-       "        <td>Finland</td>\n",
-       "        <td>79.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Wyatt Girard</td>\n",
-       "        <td>France</td>\n",
-       "        <td>99.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Fynn Zimmermann</td>\n",
-       "        <td>Germany</td>\n",
-       "        <td>94.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Ladislav Kovács</td>\n",
-       "        <td>Hungary</td>\n",
-       "        <td>78.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Manoj Pareek</td>\n",
-       "        <td>India</td>\n",
-       "        <td>111.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Hugh O&#x27;Reilly</td>\n",
-       "        <td>Ireland</td>\n",
-       "        <td>114.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Lucas Mancini</td>\n",
-       "        <td>Italy</td>\n",
-       "        <td>50.49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Johannes Van der Berg</td>\n",
-       "        <td>Netherlands</td>\n",
-       "        <td>65.34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Bjørn Hansen</td>\n",
-       "        <td>Norway</td>\n",
-       "        <td>72.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Stanisław Wójcik</td>\n",
-       "        <td>Poland</td>\n",
-       "        <td>76.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>João Fernandes</td>\n",
-       "        <td>Portugal</td>\n",
-       "        <td>102.96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Enrique Muñoz</td>\n",
-       "        <td>Spain</td>\n",
-       "        <td>98.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Joakim Johansson</td>\n",
-       "        <td>Sweden</td>\n",
-       "        <td>75.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Jack Smith</td>\n",
-       "        <td>USA</td>\n",
-       "        <td>98.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>Phil Hughes</td>\n",
-       "        <td>United Kingdom</td>\n",
-       "        <td>98.01</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('Diego Gutiérrez', 'Argentina', 39.6),\n",
-       " ('Mark Taylor', 'Australia', 81.18),\n",
-       " ('Astrid Gruber', 'Austria', 69.3),\n",
-       " ('Daan Peeters', 'Belgium', 60.39),\n",
-       " ('Luís Gonçalves', 'Brazil', 108.9),\n",
-       " ('François Tremblay', 'Canada', 99.99),\n",
-       " ('Luis Rojas', 'Chile', 97.02),\n",
-       " ('František Wichterlová', 'Czech Republic', 144.54),\n",
-       " ('Kara Nielsen', 'Denmark', 37.62),\n",
-       " ('Terhi Hämäläinen', 'Finland', 79.2),\n",
-       " ('Wyatt Girard', 'France', 99.99),\n",
-       " ('Fynn Zimmermann', 'Germany', 94.05),\n",
-       " ('Ladislav Kovács', 'Hungary', 78.21),\n",
-       " ('Manoj Pareek', 'India', 111.87),\n",
-       " (\"Hugh O'Reilly\", 'Ireland', 114.84),\n",
-       " ('Lucas Mancini', 'Italy', 50.49),\n",
-       " ('Johannes Van der Berg', 'Netherlands', 65.34),\n",
-       " ('Bjørn Hansen', 'Norway', 72.27),\n",
-       " ('Stanisław Wójcik', 'Poland', 76.23),\n",
-       " ('João Fernandes', 'Portugal', 102.96),\n",
-       " ('Enrique Muñoz', 'Spain', 98.01),\n",
-       " ('Joakim Johansson', 'Sweden', 75.24),\n",
-       " ('Jack Smith', 'USA', 98.01),\n",
-       " ('Phil Hughes', 'United Kingdom', 98.01)]"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
