Checked Record Sales by Genre using SQL

--- a/chinook/SQL Queries for Record Sales.ipynb
+++ b/chinook/SQL Queries for Record Sales.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        " ('customer_usa', 'view')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,6 +133,310 @@
     "1. customer_usa: Customers in the USA\n",
     "2. customer_gt_90_dollars: Customers who have purchased more than 90 dollars in music"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A new record label has signed on to distribute through our store. We've come to an agreement where I will sell three of the 4 new albums they are selling:\n",
+    "\n",
+    "|Artist Name| \tGenre|\n",
+    "|---|---|\n",
+    "|Regal |\tHip-Hop|\n",
+    "|Red Tone |\tPunk|\n",
+    "|Meteor and the Girls |\tPop\n",
+    "|Slim Jim Bites |\tBlues\n",
+    "\n",
+    "Since I don't know anything about the individual artists, the only information I have to know what I want to purchase is the name of the artist and the genre.\n",
+    "\n",
+    "In general, unless it's a big named artist, the name has low impact on the sales. These names are fairly neutral in sentiment, so I will rely on the genre to be the deciding factor of my choice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///chinook.db\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>genre_name</th>\n",
+       "        <th>number_of_tracks</th>\n",
+       "        <th>genre_percent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Rock</td>\n",
+       "        <td>2635</td>\n",
+       "        <td>55.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Metal</td>\n",
+       "        <td>619</td>\n",
+       "        <td>13.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Alternative &amp; Punk</td>\n",
+       "        <td>492</td>\n",
+       "        <td>10.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Latin</td>\n",
+       "        <td>167</td>\n",
+       "        <td>3.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>R&amp;B/Soul</td>\n",
+       "        <td>159</td>\n",
+       "        <td>3.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Blues</td>\n",
+       "        <td>124</td>\n",
+       "        <td>2.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Jazz</td>\n",
+       "        <td>121</td>\n",
+       "        <td>2.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Alternative</td>\n",
+       "        <td>117</td>\n",
+       "        <td>2.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Easy Listening</td>\n",
+       "        <td>74</td>\n",
+       "        <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Pop</td>\n",
+       "        <td>63</td>\n",
+       "        <td>1.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Electronica/Dance</td>\n",
+       "        <td>55</td>\n",
+       "        <td>1.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Classical</td>\n",
+       "        <td>47</td>\n",
+       "        <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Reggae</td>\n",
+       "        <td>35</td>\n",
+       "        <td>0.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Hip Hop/Rap</td>\n",
+       "        <td>33</td>\n",
+       "        <td>0.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Heavy Metal</td>\n",
+       "        <td>8</td>\n",
+       "        <td>0.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Soundtrack</td>\n",
+       "        <td>5</td>\n",
+       "        <td>0.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>TV Shows</td>\n",
+       "        <td>2</td>\n",
+       "        <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Drama</td>\n",
+       "        <td>1</td>\n",
+       "        <td>0.02</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Rock', 2635, 55.39),\n",
+       " ('Metal', 619, 13.01),\n",
+       " ('Alternative & Punk', 492, 10.34),\n",
+       " ('Latin', 167, 3.51),\n",
+       " ('R&B/Soul', 159, 3.34),\n",
+       " ('Blues', 124, 2.61),\n",
+       " ('Jazz', 121, 2.54),\n",
+       " ('Alternative', 117, 2.46),\n",
+       " ('Easy Listening', 74, 1.56),\n",
+       " ('Pop', 63, 1.32),\n",
+       " ('Electronica/Dance', 55, 1.16),\n",
+       " ('Classical', 47, 0.99),\n",
+       " ('Reggae', 35, 0.74),\n",
+       " ('Hip Hop/Rap', 33, 0.69),\n",
+       " ('Heavy Metal', 8, 0.17),\n",
+       " ('Soundtrack', 5, 0.11),\n",
+       " ('TV Shows', 2, 0.04),\n",
+       " ('Drama', 1, 0.02)]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP VIEW genre_count;\n",
+    "CREATE VIEW genre_count AS\n",
+    "SELECT g.name genre_name,\n",
+    "       SUM(il.quantity) number_of_tracks\n",
+    "FROM invoice_line il\n",
+    "INNER JOIN track t ON t.track_id = il.track_id\n",
+    "INNER JOIN genre g ON t.genre_id = g.genre_id\n",
+    "GROUP BY 1\n",
+    "ORDER BY 2 DESC;\n",
+    "\n",
+    "SELECT genre_name,\n",
+    "       number_of_tracks,\n",
+    "      ROUND(CAST(number_of_tracks AS FLOAT) * 100 / (SELECT SUM(number_of_tracks)\n",
+    "                                          FROM genre_count),2) genre_percent\n",
+    "FROM genre_count;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the 4 options were Punk, Pop, Hip Hop, and Blues, and my sales quantities are shown above. It looks like I will be ordering the Punk, Blues, and Pop albums and leaving off the Hip Hop album. As it stands, since Pop and Hip Hop are fairly close to each other around 1\\% of sales, I would probably just take the punk and blues albums.\n",
+    "\n",
+    "Something that I note from my own music experience, Alternative \\& punk are so different that they should not be combined into one genre. Punk by itself is already a diverse genre, and Alternative is rather all encompassing. These two being grouped together may be throwing the representation of the sales entirely out of whack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///chinook.db\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>invoice_line_id</th>\n",
+       "        <th>invoice_id</th>\n",
+       "        <th>track_id</th>\n",
+       "        <th>unit_price</th>\n",
+       "        <th>quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1158</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1159</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1160</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1161</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1162</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>6</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1163</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>7</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1164</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>8</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1165</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>9</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1166</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>10</td>\n",
+       "        <td>1</td>\n",
+       "        <td>1167</td>\n",
+       "        <td>0.99</td>\n",
+       "        <td>1</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 1, 1158, 0.99, 1),\n",
+       " (2, 1, 1159, 0.99, 1),\n",
+       " (3, 1, 1160, 0.99, 1),\n",
+       " (4, 1, 1161, 0.99, 1),\n",
+       " (5, 1, 1162, 0.99, 1),\n",
+       " (6, 1, 1163, 0.99, 1),\n",
+       " (7, 1, 1164, 0.99, 1),\n",
+       " (8, 1, 1165, 0.99, 1),\n",
+       " (9, 1, 1166, 0.99, 1),\n",
+       " (10, 1, 1167, 0.99, 1)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
