Calculated Total Sales and Sales Velocity for Agents

--- a/chinook/SQL Queries for Record Sales.ipynb
+++ b/chinook/SQL Queries for Record Sales.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,6 +95,10 @@
        "        <td>customer_usa</td>\n",
        "        <td>view</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "        <td>genre_count</td>\n",
+       "        <td>view</td>\n",
+       "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
@@ -110,10 +114,11 @@
        " ('playlist_track', 'table'),\n",
        " ('track', 'table'),\n",
        " ('customer_gt_90_dollars', 'view'),\n",
-       " ('customer_usa', 'view')]"
+       " ('customer_usa', 'view'),\n",
+       " ('genre_count', 'view')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,6 +133,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Topselling Genres (To Determine New Record Purchases)\n",
+    "\n",
     "The first thing I am going to want to do is get a look at what tables and views the database has. In addition to all the tables in the schema, there are two views:\n",
     "\n",
     "1. customer_usa: Customers in the USA\n",
@@ -154,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +296,7 @@
        " ('Drama', 1, 0.02)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,8 +330,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top Sales Agents\n",
+    "\n",
+    "I want to determine the top sales agents for my music store. If I can determine who has the best selling velocity, value/time, then I can try to determine what makes them sell more than ther other sales folk. That information will be valuable to train new sales agents.\n",
+    "\n",
+    "I am going to look at a table involving the Agent Name, Total Sales, and Initial Start Date. Then, I will determine sales velocity after.\n",
+    "\n",
+    "- I will first compile a table of every customer that has the customer ID and total sales\n",
+    "- I will link this table with the employee table to then gather total sales by each employee. I will also include their start date"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * sqlite:///chinook.db\n",
+      "Done.\n",
+      "Done.\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>customer_id</th>\n",
+       "        <th>support_rep_id</th>\n",
+       "        <th>total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>3</td>\n",
+       "        <td>108.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>5</td>\n",
+       "        <td>82.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>3</td>\n",
+       "        <td>99.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>4</td>\n",
+       "        <td>4</td>\n",
+       "        <td>72.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>5</td>\n",
+       "        <td>4</td>\n",
+       "        <td>144.54</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 3, '108.90'),\n",
+       " (2, 5, '82.17'),\n",
+       " (3, 3, '99.99'),\n",
+       " (4, 4, '72.27'),\n",
+       " (5, 4, '144.54')]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "DROP VIEW IF EXISTS customer_total;\n",
+    "CREATE VIEW customer_total AS\n",
+    "    SELECT c.customer_id customer_id,\n",
+    "           c.support_rep_id support_rep_id,\n",
+    "           PRINTF('%.2f',SUM(i.total)) total\n",
+    "    FROM customer c\n",
+    "    INNER JOIN invoice i ON c.customer_id = i.customer_id\n",
+    "    GROUP BY 1;\n",
+    "\n",
+    "SELECT * FROM customer_total\n",
+    "LIMIT 5;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -340,103 +440,76 @@
       "text/html": [
        "<table>\n",
        "    <tr>\n",
-       "        <th>invoice_line_id</th>\n",
-       "        <th>invoice_id</th>\n",
-       "        <th>track_id</th>\n",
-       "        <th>unit_price</th>\n",
-       "        <th>quantity</th>\n",
+       "        <th>sales_agent</th>\n",
+       "        <th>hire_date</th>\n",
+       "        <th>work_length_days</th>\n",
+       "        <th>sales_total</th>\n",
+       "        <th>sales_velocity</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>1</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1158</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
+       "        <td>Jane Peacock</td>\n",
+       "        <td>2017-04-01 00:00:00</td>\n",
+       "        <td>1369.0</td>\n",
+       "        <td>1731.51</td>\n",
+       "        <td>1.264799123447772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>2</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1159</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
+       "        <td>Steve Johnson</td>\n",
+       "        <td>2017-10-17 00:00:00</td>\n",
+       "        <td>1170.0</td>\n",
+       "        <td>1393.92</td>\n",
+       "        <td>1.1913846153846155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>3</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1160</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>4</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1161</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>5</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1162</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>6</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1163</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>7</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1164</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>8</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1165</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>9</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1166</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>10</td>\n",
-       "        <td>1</td>\n",
-       "        <td>1167</td>\n",
-       "        <td>0.99</td>\n",
-       "        <td>1</td>\n",
+       "        <td>Margaret Park</td>\n",
+       "        <td>2017-05-03 00:00:00</td>\n",
+       "        <td>1337.0</td>\n",
+       "        <td>1584.00</td>\n",
+       "        <td>1.1847419596110698</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[(1, 1, 1158, 0.99, 1),\n",
-       " (2, 1, 1159, 0.99, 1),\n",
-       " (3, 1, 1160, 0.99, 1),\n",
-       " (4, 1, 1161, 0.99, 1),\n",
-       " (5, 1, 1162, 0.99, 1),\n",
-       " (6, 1, 1163, 0.99, 1),\n",
-       " (7, 1, 1164, 0.99, 1),\n",
-       " (8, 1, 1165, 0.99, 1),\n",
-       " (9, 1, 1166, 0.99, 1),\n",
-       " (10, 1, 1167, 0.99, 1)]"
+       "[('Jane Peacock', '2017-04-01 00:00:00', 1369.0, '1731.51', 1.264799123447772),\n",
+       " ('Steve Johnson', '2017-10-17 00:00:00', 1170.0, '1393.92', 1.1913846153846155),\n",
+       " ('Margaret Park', '2017-05-03 00:00:00', 1337.0, '1584.00', 1.1847419596110698)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "%%sql\n",
+    "SELECT e.first_name || ' ' || e.last_name sales_agent,\n",
+    "       e.hire_date,\n",
+    "       JULIANDAY((SELECT MAX(invoice_date) FROM invoice)) - JULIANDAY(hire_date) work_length_days,\n",
+    "       PRINTF('%.2f',SUM(ct.total)) sales_total,\n",
+    "       SUM(ct.total) / (JULIANDAY((SELECT MAX(invoice_date) FROM invoice)) - JULIANDAY(hire_date)) AS sales_velocity\n",
+    "FROM employee e\n",
+    "INNER JOIN customer_total ct\n",
+    "ON e.employee_id = ct.support_rep_id\n",
+    "GROUP BY sales_agent\n",
+    "ORDER BY sales_velocity DESC;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After looking through the invoice data, I noticed that the last invoice was dated 2020-12-30 and that no employees were listed with a date of leaving employment.\n",
+    "\n",
+    "Using the difference between the last invoice date and the date of hire, I was able to create a length of time, in days, that each employee had worked for the company.\n",
+    "\n",
+    "Dividing the total sales volume by the number of days leads me to the metric that I am calling **sales velocity** \n",
+    "\n",
+    "$$\\text{Sales Velocity} = \\frac{\\text{Total Sales}}{\\text{Days Worked}}$$\n",
+    "\n",
+    "Initially, looking at the hire date, I assumed that Jane Peacock was not doing the best because Steve Johnson had accumulated only a few hundred dollars less in sales while having worked 6 months less than Jane. This was before looking at the final invoice date.\n",
+    "\n",
+    "Our clear winner, is Jane Peacock with almost 5 percent hire sales than the other two. Steve Johnson comes in second, only slightly ahead of Margaret Park."
+   ]
   },
   {
    "cell_type": "code",
@@ -462,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
